objects/amc__User_Story__c.object
<CustomObject>
    <description>The User Story Object is a child to the Requirement Object and captures the detailed scenarios that need to delivered as part of the Requirement</description>
    <fields>
        <fullName>amc__Acceptance_Criteria__c</fullName>
        <inlineHelpText>Detailed notes on how this User Story will be evaluated</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Action this User Story relates to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__As_a__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Persona record that this User Story relates to.</inlineHelpText>
        <label>As a</label>
        <referenceTo>amc__Persona__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Delivery_Status__c</fullName>
        <inlineHelpText>Identifies the delivery status of the User Story based on the status of the Action related to this record</inlineHelpText>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Effort__c</fullName>
        <inlineHelpText>Identifies the effort required to deliver this User Story</inlineHelpText>
        <label>Effort</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__I_want_to__c</fullName>
        <inlineHelpText>A description of what the Persona would like to be able to do</inlineHelpText>
        <label>I want to</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Requirement__c</fullName>
        <inlineHelpText>Links to the Requirement record this User Story relates to</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>amc__Requirement__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__So_that_I_can__c</fullName>
        <inlineHelpText>A description of what the Persona is trying to achieve</inlineHelpText>
        <label>So that I can</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <inlineHelpText>Identifies the Status of the User Story</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Summary__c</fullName>
        <inlineHelpText>A summary description of the User Story</inlineHelpText>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Requirement__c</columns>
        <columns>amc__Action__c</columns>
        <columns>amc__Status__c</columns>
        <columns>amc__Effort__c</columns>
        <columns>amc__As_a__c</columns>
        <columns>amc__I_want_to__c</columns>
        <columns>amc__So_that_I_can__c</columns>
        <columns>amc__Acceptance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>USID:{000000}</displayFormat>
        <label>User Story ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>